--- a/css/demo.css
+++ b/css/demo.css
@@ -1,5 +1,5 @@
 /* General Blueprint Style */
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
+@import url('https://fonts.googleapis.com/css?family=Merriweather|Quicksand');
 @font-face {
 	font-family: 'bpicons';
 	src:url('../fonts/bpicons/bpicons.eot');
@@ -19,9 +19,10 @@ body, html { font-size: 100%; padding: 0; margin: 0;}
 .clearfix:after { clear: both; }
 
 body {
-    font-family: 'Lato', Calibri, Arial, sans-serif;
+    font-family: 'Quicksand', sans-serif;
     color: #fff;
-    background: #47a3da;
+    background: #2A2D34;
+		font-size: 0.6em;
 }
 
 a {
@@ -41,7 +42,7 @@ a:hover {
 }
 
 .container > header h1 {
-	font-size: 2.125em;
+	font-size: 1.8em;
 	line-height: 1.3;
 	margin: 0 0 0.6em 0;
 	float: left;
@@ -56,6 +57,7 @@ a:hover {
 	text-transform: uppercase;
 	letter-spacing: 0.5em;
 	padding: 0 0 0.6em 0.1em;
+	font-size: 2.5em;
 }
 
 .container > header > span span:after {
